Fix Top Header alignment #131

--- a/Shopper/src/styles/TopHeader.module.css
+++ b/Shopper/src/styles/TopHeader.module.css
@@ -38,10 +38,12 @@
 }
 
 .searchInputRoot {
-  padding: 4px;
+  padding-left: 4px;
   height: 40px;
   flex-grow: 1;
   border: none;
+  display: flex;
+  align-items: center;
   border-radius: 5px 0 0 5px;
   background-color: white;
   font-size: 14px;
